--- a/src/styles/cms/contentActions.st.css
+++ b/src/styles/cms/contentActions.st.css
@@ -1,6 +1,8 @@
 @st-import CMS, [
   --spacing-unit,
   --grad-2,
+  --color-background-2,
+  --color-background-contrast-1,
   breakpoint-sm,
   breakpoint-md,
   breakpoint-lg
@@ -10,10 +12,13 @@
   dialog,
   tabs,
   cardGrid,
-  addMultipleCheckbox
+  addMultipleCheckbox,
+  reorderItems
 ] from "../../components/ContentActions/contentActions.st.css";
 @st-import [--dialog-padding-x, --dialog-padding-y] from "@actionishope/shelley/Dialog/dialog.st.css";
 @st-import Button from "@actionishope/shelley/Button/button.st.css";
+
+@st-import ReorderItems from "../../components/ReorderItems/reorderItems.st.css";
 
 @st-scope CMS {
 
@@ -77,6 +82,30 @@
     position: relative;
     padding-bottom: 0;
     place-content: baseline;
+  }
+
+  .dialog .reorderItems {
+    height: calc(70vh - 130px);
+    overflow: hidden scroll;
+  }
+
+  .dialog .reorderItems::content {
+    padding-top: 0
+  }
+
+
+  .dialog .reorderItems::dragContainer {
+    margin-top: var(--spacing-unit);
+    padding: var(--spacing-unit);
+  }
+
+  .dialog .reorderItems::dragContainer:isDragging {
+    background-color: #83838312;
+  }
+
+  .dialog .reorderItems::item {
+    background-color: var(--color-background-contrast-1);
+    margin-bottom: calc(var(--spacing-unit) * 1);
   }
 }
 
